RESOLVED FIXED77316
[chromium/mac] Fix two-finger scrolling
https://bugs.webkit.org/show_bug.cgi?id=77316
Summary [chromium/mac] Fix two-finger scrolling
Nico Weber
Reported 2012-01-29 21:23:36 PST
[chromium/mac] Fix two-finger scrolling
Attachments
Patch (2.40 KB, patch)
2012-01-29 21:25 PST, Nico Weber
no flags
Nico Weber
Comment 1 2012-01-29 21:25:54 PST
Nico Weber
Comment 2 2012-01-29 21:28:12 PST
WebKit Review Bot
Comment 3 2012-01-29 21:32:05 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
WebKit Review Bot
Comment 4 2012-01-29 22:55:32 PST
Comment on attachment 124492 [details] Patch Clearing flags on attachment: 124492 Committed r106214: <http://trac.webkit.org/changeset/106214>
WebKit Review Bot
Comment 5 2012-01-29 22:55:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.