[chromium/mac] Fix two-finger scrolling https://bugs.webkit.org/show_bug.cgi?id=77316

http://trac.webkit.org/changeset/106021/trunk changed the phase enums
to match AppKit. This changes WebMouseWheelEvent accordingly.

No tests, because DRT doesn't support synthetic scroll events with
event phases.

Patch by Nico Weber <nicolasweber@gmx.de> on 2012-01-29
Reviewed by Anders Carlsson.

* public/WebInputEvent.h:
* src/mac/WebInputEventFactory.mm:

Canonical link: https://commits.webkit.org/94185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106214 268f45cc-cd09-0410-ab3c-d52691b4dbfc